# embedding-tiler

./: .env  .env.example  .gitmodules  Makefile  README.md  nrcan_p2  pyproject.toml
macrostrat/embedding_tiler/: __init__.py  deposit_models.py  nrcan_p2  text_pipeline.py  tile_processor.py  utils.py
tests/: test_embedding_tiler.py  test_tile_operations.py
tests/fixtures/: carto-z5-x6-y12.pbf
